# py-ai-core

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  BADGES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.simple  LICENSE  Makefile  OPENSOURCE_CHECKLIST.md  README.md  SECURITY.md  TROUBLESHOOTING.md  docker-compose.yml  env.example  logging_config.yaml  logging_config_simple.yaml  pyproject.toml
.github/workflows/: ci.yml
py_ai_core/: logging_config.py  main.py
py_ai_core/core/: config.py  context.py  database.py  json_formatter.py  logging_filters.py  middleware.py  telemetry.py  utils.py
py_ai_core/mcp/: ops_router.py  router.py
py_ai_core/models/: db_models.py  schemas.py
py_ai_core/services/: llm_service.py  session_service.py
py_ai_core/tools/: __init__.py  general_tools.py  math_tools.py  registry.py
tests/: conftest.py  test_general_tools.py  test_main_api.py  test_mcp_router.py  test_session_service.py
